0x0A-python-inheritance/tests/7-base_geometry.txt
    >>> type(bg) == BaseGeometry
    True
    
    >>> bg.area(5)
    Traceback (most recent call last):
    ...
    TypeError: area() takes 1 positional argument but 2 were given
